--- a/public/registernewdeath.html
+++ b/public/registernewdeath.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Death Registration Form</title>
+	<link rel="shortcut icon" href="images/LOGO.png" type="image/x-icon">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -103,7 +104,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-xl bg-primary text-light">
+	<nav class="navbar navbar-expand-xl bg-success text-light">
 
 		</div>
 		<div class="container-fluid">
@@ -142,25 +143,30 @@
 							Print Certificate
 						</a>
 						<ul class="dropdown-menu bg-light">
-							<li><a class="dropdown-item " href="printbirth.html">Print Birth Certificate</a></li>
+							<li><a class="dropdown-item " href="registeredbirth.html">Print Birth Certificate</a></li>
 							<li>
 								<hr class="dropdown-divider ">
 							</li>
-							<li><a class="dropdown-item  outline-dark" href="printdeath.html">Print Death
-									Certificate</a></li>
+							<li><a class="dropdown-item  outline-dark" href="registereddeath.html">Print Death Certificate</a></li>
 						</ul>
 					</li>
 
+					<div class="d-flex" role="search">
+					
+						<a class="btn btn-outline-light m-1 text-dark" 
+							href="index.html">log out</a>
+					</div>
 
 				</ul>
 				
 			</div>
 		</div>
 	</nav>
-	<h2 class="topp">
+	<h2 class="text-success text-center text-capitalize ">
+		
 		fill in the details to register
 	</h2>
-	<form class="form">
+	<form class="form bg-success text-light ">
 		<label for="deceasedName">Deceased's Full Name:</label>
 		<input type="text" id="deceasedName" name="deceasedName" required>
 
@@ -195,7 +201,7 @@
 		<label for="Registra_name">Registra name:</label>
 		<input type="text" id="Registra_name" name="fatherName" required>
 
-		<button type="button" onclick="sub(event)" class="btn btn-outline-primary">Register</button>
+		<button type="button" onclick="sub(event)" class="btn btn-light btn-outline-primary">Register</button>
 	</form>
 </body>
 
@@ -224,6 +230,12 @@
 <script>
 
 
+let userbd = JSON.parse(localStorage.getItem("userbd"))
+    console.log(userbd);
+
+    if (userbd == null) {
+        location.href="index.html"
+    }
 
 
 	let alldata = []
@@ -338,10 +350,12 @@
 				})
 					.then(() => {
 						console.log("Document successfully written!");
+						alert("Deceased Registration successfully written!");
 						location.href = "registereddeath.html"
 					})
 					.catch((error) => {
 						console.error("Error writing document: ", error);
+						alert("Error writing document: ", error);
 					});
 
 			}
