--- a/public/registereddeath.html
+++ b/public/registereddeath.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-	<title>Birth Registration Form</title>
+	<title>Death Register </title>
+	<link rel="shortcut icon" href="images/LOGO.png" type="image/x-icon">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -78,11 +79,11 @@
 
 		.form {
 			margin-top: 20px;
-			box-shadow: blue;
+			box-shadow: rgb(11, 90, 2);
 		}
 
 		.form input:focus {
-			border: 1px solid rgb(13, 110, 253);
+			border: 1px solid rgb(2, 92, 34);
 			outline: none;
 		}
 
@@ -104,7 +105,7 @@
 		.clickkk {
 			text-align: center;
 			text-transform: uppercase;
-			color: rgb(13, 110, 253);
+			color: rgb(3, 89, 9);
 			font-weight: bold;
 			text-shadow: 2px 2px 1px black;
 		}
@@ -118,7 +119,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-xl bg-primary text-light">
+	<nav class="navbar navbar-expand-xl bg-success text-light">
 
 		</div>
 		<div class="container-fluid">
@@ -158,12 +159,11 @@
 							Print Certificate
 						</a>
 						<ul class="dropdown-menu bg-light">
-							<li><a class="dropdown-item " href="printbirth.html">Print Birth Certificate</a></li>
+							<li><a class="dropdown-item " href="registeredbirth.html">Print Birth Certificate</a></li>
 							<li>
 								<hr class="dropdown-divider ">
 							</li>
-							<li><a class="dropdown-item  outline-dark" href="printdeath.html">Print Death
-									Certificate</a></li>
+							<li><a class="dropdown-item  outline-dark" href="registereddeath.html">Print Death Certificate</a></li>
 						</ul>
 					</li>
 
@@ -176,11 +176,13 @@
 						type="submit">Search</button>
 					<button class="btn btn-outline-light m-1 text-dark" onclick="reloadit()"
 						type="submit">Cancle</button>
+					<a class="btn btn-outline-light m-1 text-dark" 
+						href="index.html">log out</a>
 				</div>
 			</div>
 		</div>
 	</nav>
-	<h2 class="clickkk">
+	<h2 class="text-success text-center text-capitalize ">
 		click to print Certificate
 	</h2>
 	<div class="show" id="show">
@@ -216,6 +218,14 @@
 
 <script>
 
+
+let userbd = JSON.parse(localStorage.getItem("userbd"))
+    console.log(userbd);
+
+    if (userbd == null) {
+        location.href="index.html"
+    }
+
 	let alldata = []
 	let index = 0
 	db.collection("death-reg").get().then((querySnapshot) => {
@@ -227,12 +237,14 @@
 			alldata.push(doc.data())
 
 			document.getElementById("show").innerHTML += `
-			<button type="button" onclick=onedata(${index}) class="btn btn-outline-primary  onebutttoshow ">
-			<p>Deceased Name: ${element.deceasedName}</p>
-			<p>Date Of Death: ${element.dod}</p>
-			<p>Place Of Death: ${element.placeOfDeath}</p>
-			
-		</button>
+			<div class="card m-2 bg-success text-light shadow p-3 mb-5  rounded" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Deceased Name: ${element.deceasedName}</h5>
+    <p class="card-text">Date Of Death: ${element.dod}</p>
+    <p class="card-text">Place Of Death: ${element.placeOfDeath}</p>
+    <button onclick=onedata(${index}) class="btn btn-success btn-outline-light" >print certificate</button>
+  </div>
+</div>
 		`
 			index++
 
@@ -274,11 +286,15 @@
 
 
 				resultDiv.innerHTML += `
-		<button type="button" onclick=twodata(${index}) class="btn btn-outline-primary  onebutttoshow ">
-			<p>Deceased Name: ${item.deceasedName}</p>
-			<p>Date Of Death: ${item.dod}</p>
-			<p>Place Of Death: ${item.placeOfDeath}</p>
-		</button>`
+				<div class="card m-2 bg-success text-light shadow p-3 mb-5  rounded" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Deceased Name: ${element.deceasedName}</h5>
+    <p class="card-text">Date Of Death: ${element.dod}</p>
+    <p class="card-text">Place Of Death: ${element.placeOfDeath}</p>
+    <button onclick=twodata(${index}) class="btn btn-success btn-outline-light" >print certificate</button>
+  </div>
+</div>
+		`
 				console.log(matches);
 			}
 		} else {
